--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,36 @@
 remote_theme: just-the-docs/just-the-docs
+
+logo: "/assets/images/just-the-docs.png"
+
+search_enabled: false
+
+collections:
+  # Define a collection named "docs", its documents reside in the "_docs" directory
+  SII:
+    permalink: "/:collection/:path/"
+    output: true
+
+  SEPA:
+    permalink: "/:collection/:path/"
+    output: true
+
+  Modelos:
+    permalink: "/:collection/:path/"
+    output: true
+
+  Log:
+    permalink: "/:collection/:path/"
+    output: true
+
+
+
+just_the_docs:
+  collections:
+    SII:
+      name: SII
+    SEPA:
+      name: SEPA
+    Modelos:
+      name: Modelos
+    Log:
+      name: Log
