--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,36 +1,22 @@
 remote_theme: just-the-docs/just-the-docs
 
-logo: "/assets/images/just-the-docs.png"
+logo: "/images/nubecloud.jpeg"
 
 search_enabled: false
 
-collections:
-  # Define a collection named "docs", its documents reside in the "_docs" directory
-  SII:
-    permalink: "/:collection/:path/"
-    output: true
+# Footer content
+# appears at the bottom of every page's main content
+# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
+footer_content: "Copyright &copy; 2022 Cloudcoachers, S.L."
 
-  SEPA:
-    permalink: "/:collection/:path/"
-    output: true
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
-  Modelos:
-    permalink: "/:collection/:path/"
-    output: true
-
-  Log:
-    permalink: "/:collection/:path/"
-    output: true
-
-
-
-just_the_docs:
-  collections:
-    SII:
-      name: SII
-    SEPA:
-      name: SEPA
-    Modelos:
-      name: Modelos
-    Log:
-      name: Log
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub."
+gh_edit_repository: "https://github.com/just-the-docs/just-the-docs" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
